フロントエンド configを読むように & 超リファクタリング
